--- a/report-coupled-3Domains.ipynb
+++ b/report-coupled-3Domains.ipynb
@@ -71,6 +71,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## [Problem Statement](#toc)<a id=\"problem\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Strong Form of Problem Statement](#toc)<a id=\"strongform\"></a>\n",
+    "\n",
+    "Consider a neutron point source surronded by sphere of uranium-238 emmiting $10^6$ $\\frac{neutrons}{second}$. It is assumed that no up-scattering occures. Moreover, it is assumed that the outer surface of the sphere is a vacuum robin boundary conditions. In addition, the emission of neutrons is assumed to monoenergetic, being fast. \n",
+    "\n",
+    "This investigation looks to compare the analytical and numerical methods of solving neutron diffusion. The selected analytical for single group is a solved analytically as a second order inhomogeneous ordinary differential equation. Whereas, the two group is solved analytically using Finite Difference Method (FDM). These analyticaly solutions are then to be compared against MOOSE ,a Finite Element Method (FEM) solver. \n",
+    "\n",
+    "The following declaration of equations and parameters is given by Paul Johnson [1] \n",
+    "\n",
+    "The multi-group (energy group) time independent neutron diffusion equation (NDE) in written assuming azimuthal symmetry as\n",
+    "\n",
+    "Compute $\\Phi_g:[r_\\text{i},r_\\text{o}]\\subset\\Reals\\rightarrow\\Reals$ such that:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "  \\nabla \\cdot D_g \\nabla \\Phi_g(r) - \\Sigma_{g,r} \\Phi_g(r) + S_{g'\\rightarrow g} &= 0 \\\\\n",
+    "   q_{n,g}(r_\\text{i}) &= A_g, \\\\\n",
+    "   q_{n,g}(r_\\text{o}) &= \\frac{\\alpha}{2}\\Phi_g(r_\\text{o}).\n",
+    "\\end{align*}\n",
+    "\n",
+    "where the source term $S_{g'\\rightarrow g} := \\sum_{g'=1}^{G} \\int_\\Omega \\Sigma_{s,g'\\rightarrow g}\\, f_{s,g'\\rightarrow g}(\\mu)\\,d\\Omega$ is the group down-scattering contribution for each group $g$.\n",
+    "\n",
+    "The neutron scalar flux is: $\\Phi(r)\\ [n/cm^2 s]$ \n",
+    "\n",
+    "The total macroscopic cross section is: $\\Sigma_{tot} = \\Sigma_{non-el} + \\Sigma_{el} \\approx \\Sigma_{abs} + \\Sigma_{el}$\n",
+    "\n",
+    "And the removal cross section for the multi group cross section is $ \\Sigma_{r} = \\Sigma_{tot} - \\bar{\\mu}\\Sigma_{s} $\n",
+    "\n",
+    "For brevity, $S' = Q^{fis}_{ext} + Q^{sc}_{in}$, is written as the combined source for exterior sources and fission sources or scatter in from out of group (up and down scatter). The full _scatter in term_ requires a _group averaged scatter cross section_ that further requires a _transfer function_ differential in post collision direction $\\Omega \\cdot \\Omega '$. \n",
+    "\n",
+    "Here for the free surface (vacuum) boundary condition. The neutron density at the outer boundary $\\Phi(r) = |v| n(r) = 0$ if $ n_b\\cdot \\Omega < 0 $.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Domain\n",
     "The domain utilized in the simulation is spherical geometry containt a point source. Surronding the point source is light-water."
    ]
@@ -127,6 +170,118 @@
    ],
    "source": [
     "show_domain()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Objectives](#toc)<a id=\"obj\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Gather Cross Section Data to provide study parameters\n",
+    "2. Set up the analytical solutions\n",
+    "    - Set up the 1-group asymptotic analytic solution \n",
+    "    - Set up the 2-group asymptotic analytical solution\n",
+    "3. Code a MOOSE application to solve the neutron diffusion [problem](#strongform) using Galerkin's method with finite element basis functions\n",
+    "    - Set up spherical coordinate system\n",
+    "    - Identify best test functions for problem domain\n",
+    "4. Run similation to then be compardd with that of the analytical solutions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Approach](#toc)<a id=\"app\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Analytic Solution](#toc)<a id=\"analyticalsol\"></a> \n",
+    "\n",
+    "A general solution is commonly given without the asymptotic condition as:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\Phi(r) =  \\frac{S_0 e^{-\\kappa r}}{4\\pi Dr} \\ \\ \\ (2)\n",
+    "\\end{align*}\n",
+    "\n",
+    "On the other hand, linear transport theory does provide a result at the asymptotic limit for moderately absorbing mediums given that the source flux is not infinity. The integral transport equation is written:\n",
+    "\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\Phi(r) = \\int dV\\  \\frac{S_0 e^{- \\Sigma_t r}}{4 \\pi r^2} [c \\Sigma_t \\Phi(r') + S_0 \\delta(r')] \\ \\ \\ (3)\n",
+    "\\end{align*}\n",
+    "\n",
+    "In this solution we will currently assume $S_0 = \\Phi_0$ for a single distributed source."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Weak Form of Problem Statement](#toc)<a id=\"weakform\"></a> \n",
+    "\n",
+    "The Galerkin weak formulation of the [strong form](#strongform) is as follows. Find $\\Phi_g \\in H^1\\!\\bigl([r_\\text{i},r_\\text{o}]\\bigr)$ and $u_2 \\in H^1\\!\\bigl([a,b]\\bigr)$\n",
+    "so that \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\int\\limits_a^b D\\, u_1'(x)\\,w'(x)\\,dx - \\int\\limits_a^b S(u_1, u_2)\\,w(x)\\,dx &= 0 \\quad \\forall \\quad v \\in H^1_0\\!\\bigl([a,b]\\bigr), \\text{and}\n",
+    " \\\\\n",
+    "  \\int\\limits_a^b v\\, u_2'(x)\\, w(x)\\,dx + \\int\\limits_a^b D\\, u_2'(x)\\,w'(x)\\,dx + \\int\\limits_a^b S(u_1, u_2)\\,w(x)\\,dx &= 0 \\quad \\forall \\quad v \\in H^1_0\\!\\bigl([a,b]\\bigr),\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $H^1\\!\\bigl([a,b]\\bigr) := \\bigl\\{ u:[a,b]\\subset\\Reals\\rightarrow \\Reals \\mid \\int_a^b u'^2\\,dx < \\infty\\bigr\\}$ and $H^1_0\\!\\bigl([a,b]\\bigr) := \\bigl\\{ w \\mid w \\in H^1(a,b), w(a) = 0, w(b) =0 \\bigr\\}$. Both function sets as just defined are Hilbert spaces. The function $w$ is called a test function. Because $w$, $u_1$, $u_2$ are sought in very similar sets of functions, this weak form is called Galerkin's weak form.\n",
+    "\n",
+    "1. Multiply NDE by a test function $\\phi$.\n",
+    "2. Integrate over spatial and angular domain.\n",
+    "3. Use divergence theorem to set the boundary condition across the domain surface.\n",
+    "\n",
+    "The weak form and boundary condition becomes:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    ( \\nabla \\phi, D \\nabla \\Phi  )\\ - < \\phi, D \\nabla \\Phi \\cdot \\bar{n_b} > +\\ (\\phi , \\Sigma_{tot} \\Phi) = 0 \\ \\ \\ (1B)\n",
+    "\\end{align*}\n",
+    "\n",
+    "This weak form contains the volume and surface integral as written with parenthesis and brackets respectively. The boundary conditions for the partial currents at the surface given as $\\Gamma^{\\pm}$ must be solved for:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\Gamma^{+} = J^{out}({R_S}) = \\nabla \\Phi \\cdot \\bar{n_b}\n",
+    "\\end{align*}\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\Gamma^{-} = J^{in}({R_S}) = 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "Here we will use the homogenous Neumann boundary condition, which is equivalent to the Robin boundary condition such that the reflectivity at the boundary is 0 as:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\frac{1}{4} \\Phi + \\frac{1}{2} D \\nabla \\Phi \\cdot \\bar{n_b} = J^{-} = \\frac{\\Phi}{4} - \\frac{J}{2} = \\frac{\\Phi}{4} - \\frac{D \\nabla \\Phi}{2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Solving for the weak form boundary condition and multiplying our test function $\\phi$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "     \\phi (D \\nabla \\Phi \\cdot \\bar{n_b}) = \\phi( \\frac{1}{2} D \\nabla \\Phi)\n",
+    "\\end{align*}\n",
+    "\n",
+    "#### 2 Group NDE  Weak Form:\n",
+    "\n",
+    "Assuming no upscattering from group 2 to group 1:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    -\\nabla \\cdot D_1 \\nabla \\Phi_1(r)  + \\Sigma_{r,1} \\Phi(r) =  0 \\ \\ \\ (X) \n",
+    "\\end{align*}\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    -\\nabla \\cdot D_2 \\nabla \\Phi_2(r)  + \\Sigma_{r,2} \\Phi(r) =  \\Sigma_{s,1 \\rightarrow 2} \\Phi_1(r) \\ \\ \\ (X) \n",
+    "\\end{align*}"
    ]
   },
   {
