--- a/report-coupled-3Domains.ipynb
+++ b/report-coupled-3Domains.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
       "LibMesh Version:         \n",
       "PETSc Version:           3.15.1\n",
       "SLEPc Version:           3.15.1\n",
-      "Current Time:            Tue Mar  8 13:26:23 2022\n",
+      "Current Time:            Wed Mar  9 15:27:23 2022\n",
       "Executable Timestamp:    Tue Mar  8 13:25:00 2022\n",
       "\n",
       "Parallelism:\n",
@@ -418,11 +418,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_solution_1group(df, \n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "def plot_solution(df, \n",
     "                  title='No Title', \n",
     "                  basis_functions_type='No basis functions type',\n",
     "                  flux_basis_functions_type='No basis functions type'):\n",
@@ -438,6 +442,7 @@
     "    sigma_s=3.45\n",
     "    r=np.linspace(.1,100,1000)\n",
     "    D=1/(sigma_s*(1-2/3))\n",
+    "    print(D)\n",
     "    sigma_c=0.022\n",
     "    L=math.sqrt(D/sigma_c)\n",
     "\n",
@@ -461,19 +466,22 @@
     "    plt.title(title, fontsize=20)\n",
     "    fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
     "    plt.show()\n",
-    "    print('')"
+    "    print('')\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm: cannot remove 'output2G*.csv': No such file or directory\r\n"
+      "rm: cannot remove 'output2G*.csv': No such file or directory\n",
+      "0.8695652173913042\n"
      ]
     },
     {
@@ -559,10 +567,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "_vhstack_dispatcher() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 18>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m y_b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;241m2\u001b[39m, x\u001b[38;5;241m.\u001b[39msize))\n\u001b[1;32m     17\u001b[0m y_b[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m\n\u001b[0;32m---> 18\u001b[0m res_a \u001b[38;5;241m=\u001b[39m \u001b[43msolve_bvp\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfun\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_a\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m res_b \u001b[38;5;241m=\u001b[39m solve_bvp(fun, bc, x, y_b)\n\u001b[1;32m     21\u001b[0m x_plot \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m100\u001b[39m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/moose/lib/python3.9/site-packages/scipy/integrate/_bvp.py:1062\u001b[0m, in \u001b[0;36msolve_bvp\u001b[0;34m(fun, bc, x, y, p, S, fun_jac, bc_jac, tol, max_nodes, verbose, bc_tol)\u001b[0m\n\u001b[1;32m   1057\u001b[0m max_iteration \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m   1059\u001b[0m fun_wrapped, bc_wrapped, fun_jac_wrapped, bc_jac_wrapped \u001b[38;5;241m=\u001b[39m wrap_functions(\n\u001b[1;32m   1060\u001b[0m     fun, bc, fun_jac, bc_jac, k, a, S, D, dtype)\n\u001b[0;32m-> 1062\u001b[0m f \u001b[38;5;241m=\u001b[39m \u001b[43mfun_wrapped\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1063\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m f\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m!=\u001b[39m y\u001b[38;5;241m.\u001b[39mshape:\n\u001b[1;32m   1064\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`fun` return is expected to have shape \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1065\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbut actually has \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(y\u001b[38;5;241m.\u001b[39mshape, f\u001b[38;5;241m.\u001b[39mshape))\n",
+      "File \u001b[0;32m~/miniconda3/envs/moose/lib/python3.9/site-packages/scipy/integrate/_bvp.py:647\u001b[0m, in \u001b[0;36mwrap_functions.<locals>.fun_p\u001b[0;34m(x, y, _)\u001b[0m\n\u001b[1;32m    646\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfun_p\u001b[39m(x, y, _):\n\u001b[0;32m--> 647\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39masarray(\u001b[43mfun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m, dtype)\n",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36mfun\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfun\u001b[39m(x,y):\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexp\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<__array_function__ internals>:4\u001b[0m, in \u001b[0;36mvstack\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: _vhstack_dispatcher() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.integrate import solve_bvp\n",
+    "import math\n",
+    "import numpy as np\n",
+    "#L1=math.sqrt(D/sigma_1)\n",
+    "#L2=math.sqrt(D/sigma_2)\n",
+    "\n",
+    "def fun(x,y):\n",
+    "    return np.vstack((y[1]),-np.exp(y[0]))\n",
+    "\n",
+    "def bc(ya, yb):\n",
+    "    return np.array([ya[0], yb[0]])\n",
+    "\n",
+    "x = np.linspace(0, 1, 5)\n",
+    "\n",
+    "y_a = np.zeros((2, x.size))\n",
+    "\n",
+    "y_b = np.zeros((2, x.size))\n",
+    "\n",
+    "y_b[0] = 3\n",
+    "\n",
+    "res_a = solve_bvp(fun, bc, x, y_a)\n",
+    "res_b = solve_bvp(fun, bc, x, y_b)\n",
+    "\n",
+    "x_plot = np.linspace(0, 1, 100)\n",
+    "\n",
+    "y_plot_a = res_a.sol(x_plot)[0]\n",
+    "y_plot_b = res_b.sol(x_plot)[0]\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.plot(x_plot, y_plot_a, label='y_a')\n",
+    "plt.plot(x_plot, y_plot_b, label='y_b')\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"x\")\n",
+    "plt.ylabel(\"y\")\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
