--- a/Spherical_Neutron_Transport_Report.ipynb
+++ b/Spherical_Neutron_Transport_Report.ipynb
@@ -234,8 +234,8 @@
     "\\end{align*}\n",
     "\n",
     "\\begin{align*}\n",
-    "     \\phi (-D_1 \\nabla \\Phi_1(b) \\cdot \\bar{n_b}) =0 \\\\\n",
-    "     \\phi (-D_2 \\nabla \\Phi_2(b) \\cdot \\bar{n_b}) = 0\n",
+    "     <\\phi ,-D_1 \\nabla \\Phi_1(b) \\cdot \\bar{n_b}> =0 \\\\\n",
+    "     <\\phi,-D_2 \\nabla \\Phi_2(b) \\cdot \\bar{n_b}> = 0\n",
     "\\end{align*}\n",
     "#### Vacuum B.C  Weak Form:\n",
     "Then the boundary conditions for the partial currents at the surface, $b$, given as $\\Gamma^{\\pm}$ must be solved for:\n",
